Update v1.8.5.2-BETA